# arm-mito

./: .gitattributes  .gitignore  .pre-commit-config.yaml  pixi.toml  pyproject.toml
notebooks/: MOMP_acceleration.ipynb  mito_area.ipynb  stochastic.ipynb  stochastic.py
notebooks/simbio_rebop/: converter.py  runner.py
src/: albeck.py  corbat.py  mito.py
src/literature_tests/: albeck2008.py
src/n_mito/: loop_simulator.py  test_loop_simulator.py
src/n_mito/tests/: test_loop_simulator.py
src/tests/: common.py  test_albeck.py  test_corbat.py  test_mito.py
wheels/: rebop-0.8.3-cp310-abi3-macosx_11_0_arm64.whl
