[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "arm"
authors = [
    { name="Mauro Silberberg", email="maurosilber@gmail.com" },
]
description = ""
requires-python = ">=3.7"
keywords = [
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/maurosilber/arm"
"Bug Tracker" = "https://github.com/maurosilber/arm/issues"

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = "."

[tool.ruff]
extend-include = ["*.ipynb"]
select = ["E", "F", "I"]
exclude = [
    "src/tests/test_albeck.py",
    "src/tests/test_corbat.py",
]
